deploynodepod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeippod
spec:
  strategy:
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: nodepod
  template:
    metadata:
      name: podfromreplica
      labels:
        app: nodepod
    spec:
      containers:
        - name: myapp-container        # Corrected container name
          image: gauravdemo06/myapp:v1  # Corrected image field
          ports:
            - containerPort: 80
