develop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploymentset
spec:
  strategy:
    type: RollingUpdate
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: podfromreplica
      labels:
        app: frontend
    spec:
      containers:
        - name: myapp-container        # Corrected container name
          image: gauravdemo06/myapp:v2  # Corrected image field
          ports:
            - containerPort: 80
