pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mypod
spec:
 containers:
  - name: mycontainer
    image: nginx
    ports:
    - containerPort: 80
