Loadbalancerservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-web-service
spec:
  type: LoadBalancer
  ports:
    - port: 9000             # service port
      targetPort: 80        # container port
      nodePort: 30001
  selector:                  # selector should be aligned under spec
    app: lbnodepod
