cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  ports:
    - port: 9000             # service port
      targetPort: 80         # container port
  selector:                  # selector should be aligned under spec
    app: frontend
