ngnixservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnixservice1
spec:
  type: ClusterIP
  ports:
    - port: 80             # service port
      targetPort: 80         # container port
  selector:                  # selector should be aligned under spec
    app: ngnixapp1
