nodeip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeip-web-service
spec:
  type: NodePort
  ports:
    - port: 9000             # service port
      targetPort: 80        # container port
      nodePort: 30000
  selector:                  # selector should be aligned under spec
    app: nodepod
