ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "ec2-44-204-9-197.compute-1.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ngnixservice1
                port:
                  number: 80
    - host: "ec2-44-202-72-92.compute-1.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ngnixservice2
                port:
                  number: 80
